2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reformat. Use dirstamps for preinstallation.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, delay/delay.c, include/iosh7032.h,
	include/ispsh7032.h, include/sci.h, include/sh7_pfc.h,
	include/sh7_sci.h, sci/sci.c, score/cpu_asm.c, score/ispsh7032.c,
	timer/timer.c: URL for license changed.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* score/cpu_asm.c: Removed incorrect statement about copyright
	assignment.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Preinstall $(PROJECT_INCLUDE)/rtems/score.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* score/cpu_asm.c: Rework logic that decides when to call
	_Thread_Dispatch.  Analysis by Sergei Organov <osv@javad.ru>
	determined that _ISR_Signals_to_thread_executing was not being
	honored and/or cleared properly.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in subdir Makefile.ams
	* configure.ac: Reflect changes above.
	* score/Makefile.am: Removed.
	* sci/Makefile.am: Removed.
	* timer/Makefile.am: Removed.
	* clock/Makefile.am: Removed.
	* delay/Makefile.am: Removed.
