@@ -80,7 +80,7 @@ ${ARCH}/%.$(OBJEXT): timer/%.c
 ${ARCH}/timer.rel: $(timer_rel_OBJECTS)
 	${make-rel}
 
-all-local: $(ARCH) $(PGMS) $(TMPINSTALL_FILES)
+all-local: $(PGMS) $(TMPINSTALL_FILES)
 
 .PRECIOUS: $(PGMS)
 
